--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -15,14 +15,10 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- no translation found for ro_perm_label (4791213266570841712) -->
-    <skip />
-    <!-- no translation found for ro_perm_desc (2030191017293726405) -->
-    <skip />
-    <!-- no translation found for wo_perm_label (2275102271914312340) -->
-    <skip />
-    <!-- no translation found for wo_perm_desc (4332792325927331086) -->
-    <skip />
+    <string name="ro_perm_label" msgid="4791213266570841712">"läsa snabbmeddelanden"</string>
+    <string name="ro_perm_desc" msgid="2030191017293726405">"Tillåter att ett program läser data från snabbmeddelandeleverantören."</string>
+    <string name="wo_perm_label" msgid="2275102271914312340">"skriva snabbmeddelanden"</string>
+    <string name="wo_perm_desc" msgid="4332792325927331086">"Tillåter att ett program skriver data till snabbmeddelandeleverantören."</string>
     <string name="im_label" msgid="6289028202073124911">"Chatt"</string>
     <string name="landing_page_title" msgid="8575938257482637474">"Chatt – välj ett konto"</string>
     <string name="menu_add_account" msgid="5762363412622888397">"Lägg till konto"</string>
@@ -35,7 +31,7 @@
     <string name="menu_add_contact" msgid="6315091944808434095">"Lägg till kontakt"</string>
     <string name="menu_remove_contact" msgid="3306468526492774925">"Ta bort kontakt"</string>
     <string name="menu_block_contact" msgid="727204732836017804">"Blockera kontakt"</string>
-    <string name="menu_view_blocked" msgid="7567355003496935631">"Blockerad"</string>
+    <string name="menu_view_blocked" msgid="7567355003496935631">"Blockerade"</string>
     <string name="menu_view_accounts" msgid="2876518557188672305">"Kontolista"</string>
     <string name="menu_settings" msgid="4609084900756093288">"Inställningar"</string>
     <string name="menu_start_chat" msgid="6188262479212139863">"Öppna chatt"</string>
@@ -46,7 +42,7 @@
     <string name="menu_invite_contact" msgid="4669830812552484236">"Bjud in…"</string>
     <string name="menu_switch_chats" msgid="5113455126377025717">"Byt chatt"</string>
     <string name="menu_insert_smiley" msgid="2555290958985391105">"Infoga känsloikon"</string>
-    <string name="menu_plus" msgid="5000617247235760106">"Meny+"</string>
+    <string name="menu_plus" msgid="5000617247235760106">"Menu+"</string>
     <string name="default_input_title" msgid="6182729628894599563">"Indata"</string>
     <string name="confirm" msgid="3229086014444547636">"Bekräfta"</string>
     <string name="signout_all_confirm_message" msgid="4442995839737460513">"Vill du logga ut från alla tjänster?"</string>
