--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -15,14 +15,10 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- no translation found for ro_perm_label (4791213266570841712) -->
-    <skip />
-    <!-- no translation found for ro_perm_desc (2030191017293726405) -->
-    <skip />
-    <!-- no translation found for wo_perm_label (2275102271914312340) -->
-    <skip />
-    <!-- no translation found for wo_perm_desc (4332792325927331086) -->
-    <skip />
+    <string name="ro_perm_label" msgid="4791213266570841712">"阅读即时消息"</string>
+    <string name="ro_perm_desc" msgid="2030191017293726405">"允许应用程序从即时消息内容提供者处读取数据。"</string>
+    <string name="wo_perm_label" msgid="2275102271914312340">"撰写即时消息"</string>
+    <string name="wo_perm_desc" msgid="4332792325927331086">"允许应用程序向即时消息内容提供者写入数据。"</string>
     <string name="im_label" msgid="6289028202073124911">"即时消息"</string>
     <string name="landing_page_title" msgid="8575938257482637474">"聊天 - 选择一个帐户"</string>
     <string name="menu_add_account" msgid="5762363412622888397">"添加帐户"</string>
@@ -45,7 +41,7 @@
     <string name="menu_view_contact_list" msgid="4630377976475003130">"联系人列表"</string>
     <string name="menu_invite_contact" msgid="4669830812552484236">"邀请..."</string>
     <string name="menu_switch_chats" msgid="5113455126377025717">"切换聊天"</string>
-    <string name="menu_insert_smiley" msgid="2555290958985391105">"插入表情符"</string>
+    <string name="menu_insert_smiley" msgid="2555290958985391105">"插入表情符号"</string>
     <string name="menu_plus" msgid="5000617247235760106">"MENU+"</string>
     <string name="default_input_title" msgid="6182729628894599563">"输入"</string>
     <string name="confirm" msgid="3229086014444547636">"确认"</string>
@@ -179,13 +175,13 @@
     <string name="not_signed_in" msgid="8894662143178849906">"您当前未登录。"</string>
     <string name="general_error" msgid="2784900425265121080">"错误代码 <xliff:g id="CODE">%1$d</xliff:g>"</string>
   <string-array name="default_smiley_names">
-    <item msgid="1496436377093882868">"幸福"</item>
-    <item msgid="4535010061202018372">"悲伤"</item>
+    <item msgid="1496436377093882868">"开心"</item>
+    <item msgid="4535010061202018372">"忧伤"</item>
     <item msgid="9126439186030536335">"眨眼"</item>
-    <item msgid="850866187116359823">"吐舌头"</item>
+    <item msgid="850866187116359823">"吐舌"</item>
     <item msgid="394905071090547502">"惊讶"</item>
     <item msgid="154223719974718360">"亲吻"</item>
-    <item msgid="7922997411177141520">"大喊"</item>
+    <item msgid="7922997411177141520">"叫喊"</item>
     <item msgid="2507841103887006866">"酷"</item>
     <item msgid="7305800612774038776">"财迷"</item>
     <item msgid="8019801991256267534">"说错了话"</item>
